--- a/custom.css
+++ b/custom.css
@@ -22,7 +22,7 @@ h1,h2,h3,h4,h5,h6{
 
 .main-header.jumbotron{
   color: #ffffff;
-  background-image: linear-gradient(to bottom, rgba(240, 215, 250, 0.52), rgba(43, 47, 119, 0.73)), url(background.jpg);
+  background-image: linear-gradient(to bottom, rgba(240, 215, 250, 0.52), rgba(43, 47, 119, 0.73)), url(assets/background.jpg);
   padding-top: 80px;
   margin-bottom: 50px;
   background-size: cover;
@@ -30,8 +30,12 @@ h1,h2,h3,h4,h5,h6{
 }
 
 #home-header{
-  padding-top: 250px;
-  padding-bottom: 250px;
+  padding-top: 280px;
+  padding-bottom: 280px;
+}
+
+.nav-logo{
+  height : 50px;
 }
 
 #home-header-title{
@@ -48,6 +52,10 @@ h1,h2,h3,h4,h5,h6{
   padding-bottom: 20px;
   margin-bottom: 20px;
   border-bottom: #9A9A9A solid 1px;
+}
+
+.poster-img{
+  width:100%;
 }
 
 footer{
@@ -83,7 +91,11 @@ footer{
 }
 
 
+#poster-link-img{
+  padding: 30px;
+  padding-top:10px;
 
+}
 
 
 #count-down-timer{
@@ -98,7 +110,9 @@ footer{
 }
 
 .left-nav-links{
-  padding: 5px 5px 0px 20px;
+  padding: 0px 5px 5px 20px;
+  margin-top: auto;
+  margin-bottom: auto;
 }
 
 .nav-links{
