--- a/custom.css
+++ b/custom.css
@@ -160,3 +160,66 @@ footer{
   margin-top: 20px;
   margin-bottom: 50px;
 }
+
+.yellow-links{
+    color: #EAA357;
+}
+
+.white-links{
+    color: #2B2F77;
+}
+
+.yellow-links:hover{
+  color: #EAA357;
+}
+
+.white-links:hover{
+  color: #794982;
+}
+
+
+
+
+.watch-button {
+  display: inline-block;
+  border: 2px solid white;
+  border-radius: 5px;
+  color: white;
+  text-align: center;
+  width: 130px;
+  padding: 10px;
+  transition: all 0.5s;
+  cursor: pointer;
+
+}
+
+.watch-button span {
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  transition: 0.5s;
+}
+
+#watch-button:after {
+  content: '\00bb';
+  position: absolute;
+  opacity: 0;
+  top: 0;
+  right: -10px;
+  transition: 0.1s;
+}
+
+.watch-button:hover{
+  background-color:white;
+
+}
+
+.watch-button:hover span {
+  padding-right: 10px;
+  color: #2B2F77;
+}
+
+.watch-button:hover #watch-button:after {
+  opacity: 1;
+  right: 0;
+}
